# cambium-ai-todo

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/: tasks.py
backend/app/schemas/: task.py
backend/app/tests/: test_tasks.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  biome.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  TodoApp.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  TodoStats.tsx
frontend/src/components/__tests__/: TodoApp.test.tsx
frontend/src/components/ui/: calendar.tsx  command.tsx  pagination.tsx  sidebar.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: api.ts
frontend/src/pages/: NotFound.tsx
frontend/src/utils/: dateUtils.ts
